--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,6 +35,7 @@ en:
     bkash_discount: "Discount (Bkash)"
     student_discount: "Student Discount (%)"
     bkash_discount_p: "Bkash Discount (%)"
-    sale_discount: "Sale Discount (%)"
+    sale_discount: "Sale Discount on cost price(%)"
     festival_discount: "Festival Discount (%)"
-    profit_percentage: "Profit (%)"
+    profit_percentage: "Profit on cost price (%)"
+    sale_price: "Sale price"
