--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,7 +35,7 @@ en:
     bkash_discount: "Discount (Bkash)"
     student_discount: "Student Discount (%)"
     bkash_discount_p: "Bkash Discount (%)"
-    sale_discount: "Sale Discount on cost price(%)"
+    sale_discount: "Sale Discount (%)"
     festival_discount: "Festival Discount (%)"
     profit_percentage: "Profit on cost price (%)"
     sale_price: "Sale price"
